# Luma

./: .gitignore  README.md  index.html  install.sh  package-lock.json  package.json  vite.config.ts
.agent/workflows/: start_luma.md
.github/workflows/: build-linux.yml
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: analytics.rs  commands.rs  lib.rs  lyrics.rs  player.rs  playlist.rs  settings.rs
src/components/: AlbumArt.tsx  Albums.tsx  Analytics.tsx  Genres.tsx  Library.tsx  Modal.tsx  PlayerBar.tsx  PlayerPage.tsx  Playlists.tsx  Settings.tsx  Sidebar.tsx  SleepTimerMenu.tsx  SongInfoModal.tsx  index.ts
src/context/: ModalContext.tsx
src/hooks/: index.ts  useLibrary.ts  useModal.ts  usePlaybackPersistence.ts  usePlayer.ts  usePlaylists.ts
src/models/: AppSettings.ts  LoopMode.ts  PlaybackState.ts  Playlist.ts  Song.ts  UseLibraryTypes.ts  UsePlaybackPersistenceTypes.ts  UsePlayerTypes.ts  UsePlaylistsTypes.ts  index.ts
src/providers/: ModalProvider.tsx
src/utils/: lrcParser.ts
