[package]
name = "luma"
version = "1.0.0"
description = "Luma Music Player"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "luma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5.0"
lofty = "0.22.4"
rodio = "0.21"
dirs = "6.0.0"
base64 = "0.22.1"
rayon = "1.11"
image = "0.25.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
urlencoding = "2.1"
tauri-plugin-store = "2.4.2"
tauri-plugin-process = "2"

